fix overflow issues on mobile

--- a/src/styles/base/_generic.scss
+++ b/src/styles/base/_generic.scss
@@ -112,7 +112,7 @@ th {
 }
 
 section {
-	max-width: 48.5rem;
+	max-width: 60rem;
 	margin-left: auto;
 	margin-right: auto;
 	padding-top: 7.5rem;
